--- a/code/makefile
+++ b/code/makefile
@@ -1,14 +1,13 @@
 CC = gcc
 FILE = main.c
 EXE = main
-WIN_RAYLIB = -lraylib -lopengl32 -luser32 -lkernel32 -lwinmm -lgdi32
-UNIX_RAYLIB = -lraylib -lGL -lpthread -ldl -lrt -lX11
+RAY = -lraylib -lGL -lpthread -ldl -lrt 
 STD = -lm
 
 all: $(EXE)
 
 $(EXE): $(FILE)
-	$(CC) $(FILE) -o $(EXE) $(WIN_RAYLIB) $(STD)
+		$(CC) $(FILE) -o $(EXE) $(RAY) $(STD)
 
 clean:
 	rm -f $(EXE)
